<package format="3">
  <name>rmf_building_sim_ignition_plugins</name>
  <version>1.2.0</version>
  <description>
    Ignition gazebo plugins for building infrastructure simulation
  </description>
  <author>Luca Della Vedova</author>
  <author>Kevin Ma</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_building_sim_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
