<package format="3">
  <name>rmf_building_sim_ignition_plugins</name>
  <version>1.3.1</version>
  <description>
    Ignition gazebo plugins for building infrastructure simulation
  </description>
  <author>Luca Della Vedova</author>
  <author>Kevin Ma</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmf_building_sim_common</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>
  <depend>menge_vendor</depend>
  <depend>ignition-fortress</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
