<package format="3">
  <name>rmf_robot_sim_gazebo_plugins</name>
  <version>1.3.1</version>
  <description>
    ROS 2 Gazebo plugins for TeleportIngestors, TeleportDispensers and Readonly Objects
  </description>
  <author>Luca Della Vedova</author>
  <author>Yadu</author>
  <author>Aaron Chong</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_robot_sim_common</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
