<package format="3">
  <name>rmf_robot_sim_gz_classic_plugins</name>
  <version>2.0.0</version>
  <description>
    ROS 2 Gazebo-classic plugins for TeleportIngestors, TeleportDispensers and Readonly Objects
  </description>
  <author>Luca Della Vedova</author>
  <author>Yadunund</author>
  <author>Aaron Chong</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_robot_sim_common</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
